--- a/src/app/dialogs/payment-cash/payment-cash.component.html
+++ b/src/app/dialogs/payment-cash/payment-cash.component.html
@@ -29,13 +29,15 @@
               </div>
               <mat-divider></mat-divider>
               <div class="form-row">
-
-
+                <div class="form-group col-md-12" style="margin-top: 10px;">
+                  <input type="text" class="form-control" style="cursor: pointer;" placeholder="ເລືອກສະມາຊິກ (ຖ້າມີ)" (click)="openMember()"
+                    readonly>
+                </div>
                 <div class="form-group col-md-12" style="margin-top: 10px;">
                   <label for="ticket">Ticket</label>
                   <select class="form-control" id="ticket" required formControlName="ticket" required
                     (change)="getTicketById($event.target.value)">
-                    <option value="-1">ເລືອກຄິວ</option>
+                    <option value="-1" disabled>ເລືອກຄິວ</option>
                     <option *ngFor="let t of _tickets " value="{{ t.id }}">{{ t.ticket }}
                     </option>
                   </select>
