add member id on payment

--- a/src/app/dialogs/members/members.component.html
+++ b/src/app/dialogs/members/members.component.html
@@ -30,7 +30,7 @@
                 <td class="text-left align-middle">{{ member.fullname }}</td>
                 <td class="text-left align-middle">{{ member.mobile }}</td>
                 <td class="text-center align-middle">
-                  <button mat-button color="warn" (click)="selectMember()">Choose</button></td>
+                  <button mat-button color="warn" (click)="selectMember(member)">Choose</button></td>
               </tr>
             </tbody>
           </table>
