--- a/src/app/dialogs/payment-cash/payment-cash.component.html
+++ b/src/app/dialogs/payment-cash/payment-cash.component.html
@@ -30,8 +30,8 @@
               <mat-divider></mat-divider>
               <div class="form-row">
                 <div class="form-group col-md-12" style="margin-top: 10px;">
-                  <input type="text" class="form-control" style="cursor: pointer;" placeholder="ເລືອກສະມາຊິກ (ຖ້າມີ)" (click)="openMember()" 
-                    readonly >
+                  <input type="text" class="form-control" placeholder="ເລືອກສະມາຊິກ (ຖ້າມີ)"
+                    (click)="openMember()" readonly formControlName="memberName">
                 </div>
                 <div class="form-group col-md-12" style="margin-top: 10px;">
                   <label for="ticket">Ticket</label>
