add member to pos page

--- a/src/app/dialogs/payment-cash/payment-cash.component.html
+++ b/src/app/dialogs/payment-cash/payment-cash.component.html
@@ -16,7 +16,8 @@
               ຈ່າຍເງິນສຳເລັດຈາກ ທ່ານ<p class="text-center" *ngIf="bankDataResponse">{{ bankDataResponse.name }}</p>
             </div>
             <div class="alert alert-warning text-left" role="alert" [ngClass]="showMember" *ngIf="member">
-              <p><strong>ທ່ານ {{ member.fullname }} , ເບິໂທ {{ member.mobile }}</strong></p>
+              <p><strong>ທ່ານ {{ member.memberName }} </strong></p>
+              <p><strong>ຄະແນນປະຈຸບັນ {{ member.memberPoints | number }} ຄະແນນ</strong></p>
             </div>
           </mat-card-content>
         </mat-card>
@@ -32,17 +33,6 @@
               </div>
               <mat-divider></mat-divider>
               <div class="form-row">
-                <!--
-                <div class="form-group col-md-12" style="margin-top: 10px;">
-                  <input type="text" class="form-control" placeholder="ເລືອກສະມາຊິກ (ຖ້າມີ)"
-                    (click)="openMember()" readonly formControlName="memberName">
-                </div>
-                -->
-                <div class="form-group col-md-12" style="margin-top: 10px;">
-                  <input type="text" maxlength="5" class="form-control" placeholder="enter card no ..."
-                    (keyup)="cardNoSelected($event.target.value)">
-                </div>
-
 
                 <div class="form-group col-md-12" style="margin-top: 10px;">
                   <label for="ticket">Ticket</label>
@@ -53,8 +43,6 @@
                     </option>
                   </select>
                 </div>
-
-
                 <div class="form-group col-md-12">
                   <label for="payBy">Pay By</label>
                   <select class="form-control" id="payBy" (change)="checkPaymentCash($event.target.value)"
@@ -84,13 +72,6 @@
                   <button mat-flat-button color="warn" style="width: 100%; height: 50px;" (click)="paymentProcess()"
                     [disabled]="paymentBtnDisabled">ຈ່າຍ</button>
                 </div>
-                <!--
-                  <div class="form-group col-md-12" style="margin-top: 10px;">
-                  <button mat-flat-button color="warn" style="width: 100%; height: 50px;"
-                    (click)="prepaireItemToPrint()" [disabled]="paymentBtnDisabled">Test</button>
-                </div>
-                -->
-
               </div>
             </mat-card-content>
           </mat-card>
