--- a/src/app/pages/kitchen-report-admin/kitchen-report-admin.component.html
+++ b/src/app/pages/kitchen-report-admin/kitchen-report-admin.component.html
@@ -74,47 +74,77 @@
                 </div>
               </div>
               <div class="col col-md3">
-                <div class="card ">
-                  <div class="card-header h4">
-                    ລາຍຈ່າຍ
-                  </div>
-                  <div class="card-body" style="max-height: 30vh;overflow: auto;">
-                    <div class="table-responsive">
-                      <ng-container *ngIf="paymentSummary; else noPayment">
-                        <table class="table table-bordered table-hover" style="margin: 0;">
-                          <thead class="thead-light">
-                            <th class="text-center h6">#</th>
-                            <th class="text-center h6">ວັນທີ</th>
-                            <th class="text-center h6">ເນື້ອໃນລາຍຈ່າຍ</th>
-                            <th class="text-center h6">ຈຳນວນ</th>
-                            <th class="text-center h6">ມູນຄ່າ</th>
-                            <th class="text-center h6">ຜຸ້ເອົາເງິນໃຫ້</th>
+
+                <mat-tab-group>
+                  <mat-tab label="ລາຍຈ່າຍຕາມປະເພດ">
+                    <div style="max-height: 30vh;overflow: auto;">
+                      <div class="table-responsive">
+                        <table class="table table-bordered table-hover">
+                          <thead class="thead-dark">
+                            <th class="text-center h6" style="width: 10px;">#</th>
+                            <th class="text-left h6">ລາຍຈ່າຍ ຕາມປະເພດ</th>
+                            <th class="text-right h6">ຈຳນວນ ຄັ້ງ</th>
+                            <th class="text-right h6">ລວມ</th>
                           </thead>
                           <tbody>
-                            <tr *ngFor="let payment of payments ; let i  = index">
-                              <td class="text-center">{{ i+1 }}</td>
-                              <td class="text-center text-nowrap" style="width: 300px;">
-                                {{ payment.paymentDate |date: 'dd-MMM-yyy H:mm:ss' }}</td>
-                              <td class="text-left text-nowrap" style="width: 300px;">{{ payment.remarks }}</td>
-                              <td class="text-right">{{ payment.quantity |number }}</td>
-                              <td class="text-right">{{ payment.amount | number }}</td>
-                              <td class="text-center">{{ payment.buyer  }}</td>
+                            <tr *ngFor="let paymentSum of paymentSummaries; let i = index">
+                              <td class="text-center">{{ i + 1 }}</td>
+                              <td class="text-left">{{ paymentSum.remarks }}</td>
+                              <td class="text-right">{{ paymentSum.cnt  | number}}</td>
+                              <td class="text-right">{{ paymentSum.Amount  | number}}</td>
                             </tr>
                             <tr>
-                              <td class="text-center h6" colspan="3">ລວມ</td>
-                              <td class="text-right h6">{{ paymentCount | number }}</td>
-                              <td class="text-right h6">{{ paymentSummary | number }}</td>
+                              <td colspan="3" class="text-right h5">ລວມຍອດລາຍຈ່າຍ</td>
+                              <td class="text-right h5">{{ totalPaymentSumm | number }}</td>
                             </tr>
                           </tbody>
                         </table>
-                      </ng-container>
-                      <ng-template #noPayment>
-                        <div class="h5 text-center">ບໍ່ມິລາຍຈ່າຍສຳຫຼັບມື້ນີ້</div>
-                      </ng-template>
+                      </div>
                     </div>
-                  </div>
-                </div>
-                <div class="card">
+                  </mat-tab>
+
+                  <mat-tab label="ລາຍລະອຽດລາຍຈ່າຍ">
+                    <div class="card ">
+                      <div class="card-body" style="max-height: 30vh;overflow: auto;">
+                        <div class="table-responsive">
+                          <ng-container *ngIf="paymentSummary; else noPayment">
+                            <table class="table table-bordered table-hover" style="margin: 0;">
+                              <thead class="thead-light">
+                                <th class="text-center h6">#</th>
+                                <th class="text-center h6">ວັນທີ</th>
+                                <th class="text-center h6">ເນື້ອໃນລາຍຈ່າຍ</th>
+                                <th class="text-center h6">ຈຳນວນ</th>
+                                <th class="text-center h6">ມູນຄ່າ</th>
+                                <th class="text-center h6">ຜຸ້ເອົາເງິນໃຫ້</th>
+                              </thead>
+                              <tbody>
+                                <tr *ngFor="let payment of payments ; let i  = index">
+                                  <td class="text-center">{{ i+1 }}</td>
+                                  <td class="text-center text-nowrap" style="width: 300px;">
+                                    {{ payment.paymentDate |date: 'dd-MMM-yyy H:mm:ss' }}</td>
+                                  <td class="text-left text-nowrap" style="width: 300px;">{{ payment.remarks }}</td>
+                                  <td class="text-right">{{ payment.quantity |number }}</td>
+                                  <td class="text-right">{{ payment.amount | number }}</td>
+                                  <td class="text-center">{{ payment.buyer  }}</td>
+                                </tr>
+                                <tr>
+                                  <td class="text-center h6" colspan="3">ລວມ</td>
+                                  <td class="text-right h6">{{ paymentCount | number }}</td>
+                                  <td class="text-right h6">{{ paymentSummary | number }}</td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </ng-container>
+                          <ng-template #noPayment>
+                            <div class="h5 text-center">ບໍ່ມິລາຍຈ່າຍສຳຫຼັບມື້ນີ້</div>
+                          </ng-template>
+                        </div>
+                      </div>
+                    </div>
+                  </mat-tab>
+
+                </mat-tab-group>
+                <div class=" card">
                   <div class="card-header">
                     <div class="h5">
                       ລາຍຮັບສຸທິ
@@ -134,6 +164,12 @@
                     </div>
                   </div>
                 </div>
+
+
+
+
+
+
               </div>
             </div>
           </div>
