--- a/src/app/pages/purchase-grid/purchase-grid.component.html
+++ b/src/app/pages/purchase-grid/purchase-grid.component.html
@@ -94,12 +94,13 @@
                       <td class="text-right align-middle">
                         <input type="number" class="form-control text-right" id="src_amount"
                           formControlName="src_amount" style="max-width:100px;padding:0" value="{{ item.src_amount }}"
-                          (change)="updateItemCost(item.id, item.quantity, $event.target.value)">
+                          (change)="updateItemSrcAmount(item, $event.target.value)">
                       </td>
 
                       <td class="text-right align-middle">
-                        <select class="form-control" id="src_currency" formControlName="src_currency"
-                          (change)="CurrnecySelected(item.src_amount, item.id, item.quantity)">
+                        <select class="form-control" id="src_currency"
+                          (change)="CurrnecySelected($event.target.value,item.src_amount, item.id, item.quantity)">
+                          <option value="" disabled>ເລືອກ</option>
                           <option *ngFor="let currency of currencies" value="{{ currency.id }}">
                             {{ currency.currency_name }}</option>
                         </select>
@@ -108,16 +109,16 @@
                       <td class="text-right align-middle">
                         <input type="number" class="form-control text-right" id="rate_conversion"
                           style="max-width:100px;padding:0" value="{{ item.rate_conversion}}"
-                          (change)="updateItemCost(item.id, item.quantity, $event.target.value)">
+                          (change)="updateItemCostByRate(item, $event.target.value)">
                       </td>
                       <td class="text-right align-middle">
                         <input type="number" class="form-control text-right" id="txtCost"
-                          style="max-width:100px;padding:0" value="{{ item.cost}}">
+                          style="max-width:100px;padding:0" value="{{ item.dest_amount}}"
+                          (change)="updateItemDestAmount(item, $event.target.value)">
                       </td>
                       <td class="text-right align-middle">
                         <input type="number" class="form-control text-right" id="txtQuantity"
-                          style="max-width: 80px;padding:0"
-                          (input)="updateItemQuantity(item.id, $event.target.value, item.cost)"
+                          style="max-width: 80px;padding:0" (change)="updateItemQuantity(item, $event.target.value)"
                           value="{{ item.quantity  }}">
                       </td>
                       <td class="text-right align-middle">{{ item.total |number }}</td>
