--- a/src/app/pages/pos/pos.component.html
+++ b/src/app/pages/pos/pos.component.html
@@ -98,7 +98,7 @@
                       <div class="col col-sm-12 col-md-2 text-left text-nowrap align-middle">
                         <div class="form-row">
                           <select class="form-control" (change)="discSelected($event.target.value, cart)">
-                            <option value="-1">ເລືອກ</option>
+                            <option value="-1" disabled>ເລືອກ</option>
                             <option value="-1">ປົກກະຕິ</option>
                             <option value="{{ disc.id }}" *ngFor="let disc of discs">
                               {{ disc.disc_name }}
